SFUSA/force-app/main/default/objects/Brand_Country_Region_Allocation__c/fields/Allocations_Per_Interval__c.field-meta.xml
<CustomField>
        <fullName>Allocations_Per_Interval__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PS-MC-SB-13 to manage allocations for this time period</description>
        <label>Allocations Per Interval</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>