SFUSA/force-app/main/default/objects/Brand_Country_Region_Allocation__c/fields/Brand_Country_Allocation__c.field-meta.xml
<CustomField>
        <fullName>Brand_Country_Allocation__c</fullName>
        <description>PS-MC-SB-13 to manage Brand Country Allocation for this time period</description>
        <label>Country Level Allocation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Brand_Country_Allocation__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Brand_Country_Allocation__c</referenceTo>
        <relationshipLabel>Region Level Allocations</relationshipLabel>
        <relationshipName>Brand_Country_Region_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>