SFUSA/force-app/main/default/objects/Brand_Country_Region_Allocation__c/fields/Carry_Forward_Units__c.field-meta.xml
<CustomField>
        <fullName>Carry_Forward_Units__c</fullName>
        <description>PS-MC-SB-13 to manage carry forwarded allocations for this time period</description>
        <label>Carry Forward Units</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>