SFUSA/force-app/main/default/objects/Brand_Country_Region_Allocation__c/fields/Region__c.field-meta.xml
<CustomField>
        <fullName>Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>PS-MC-SB-13 to manage region for this time period</description>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipName>Brand_Country_Region_Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>